force-app/main/default/objects/Detalle__c/Detalle__c.object-meta.xml
<CustomObject>
    <label>Detalle</label>
    <nameField>
        <displayFormat>D{0}</displayFormat>
        <label>Detalle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>