force-app/main/default/objects/Detalle__c/fields/CostoId__c.field-meta.xml
<CustomField>
    <fullName>CostoId__c</fullName>
    <label>CostoId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>