force-app/main/default/objects/Detalle__c/fields/Descripcion_de_UM__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_UM__c</fullName>
    <label>Descripción de UM</label>
    <type>TextArea</type>
</CustomField>