force-app/main/default/objects/Detalle__c/fields/Descuento_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Descuento Cliente</label>
    <referenceTo>Descuento_Cliente__c</referenceTo>
    <relationshipLabel>Detalles</relationshipLabel>
    <relationshipName>Detalles</relationshipName>
    <type>Lookup</type>
</CustomField>