force-app/main/default/objects/Detalle__c/fields/Error_Precio__c.field-meta.xml
<CustomField>
    <fullName>Error_Precio__c</fullName>
    <label>Error Precio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>