force-app/main/default/objects/Detalle__c/fields/Fecha_Vencimiento_Formateada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Formateada__c</fullName>
    <description>campo usado para guardar el formato de fecha en dia, mes y año. logica usada en el controlador  Apex maestra de precios</description>
    <label>Fecha_Vencimiento_Formateada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>