force-app/main/default/objects/Detalle__c/fields/IdPricebookentry__c.field-meta.xml
<CustomField>
    <fullName>IdPricebookentry__c</fullName>
    <label>IdPricebookentry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>