force-app/main/default/objects/Detalle__c/fields/Margen_de_Contribucion_por_Kilo__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_Contribucion_por_Kilo__c</fullName>
    <label>Margen de Contribucion por Kilo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>