force-app/main/default/objects/Detalle__c/fields/Margen_Producto__c.field-meta.xml
<CustomField>
    <fullName>Margen_Producto__c</fullName>
    <description>Para almacenar el calculo del margen %</description>
    <label>Margen Producto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>