force-app/main/default/objects/Detalle__c/fields/N_mero_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_Venta__c</fullName>
    <label>Número de Venta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>