force-app/main/default/objects/Detalle__c/fields/Numero_Detalle__c.field-meta.xml
<CustomField>
    <fullName>Numero_Detalle__c</fullName>
    <externalId>true</externalId>
    <label>Número Detalle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>