force-app/main/default/objects/Detalle__c/fields/Porcentaje_de_Rappel__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Rappel__c</fullName>
    <label>Porcentaje de Rappel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>