force-app/main/default/objects/Detalle__c/fields/Precio_Cliente_Neto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Cliente_Neto__c</fullName>
    <label>Precio Cliente Neto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>