force-app/main/default/objects/Detalle__c/fields/Precio_Final__c.field-meta.xml
<CustomField>
    <fullName>Precio_Final__c</fullName>
    <label>Precio Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>