force-app/main/default/objects/Detalle__c/fields/Relacion_Rappel_Detalle__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Rappel_Detalle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion entre detalle y rappel</description>
    <label>Relacion Rappel Detalle</label>
    <referenceTo>Rappel__c</referenceTo>
    <relationshipLabel>Detalles</relationshipLabel>
    <relationshipName>Detalles</relationshipName>
    <type>Lookup</type>
</CustomField>