force-app/main/default/objects/Detalle__c/fields/Tiene_Costo__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Costo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para checkear si el producto tiene costo y mostrar el error en la maestra cuando no tiene costo.</description>
    <label>Tiene Costo</label>
    <type>Checkbox</type>
</CustomField>