force-app/main/default/objects/Detalle__c/fields/Venta__c.field-meta.xml
<CustomField>
    <fullName>Venta__c</fullName>
    <label>Venta</label>
    <referenceTo>Venta__c</referenceTo>
    <relationshipLabel>Detalles</relationshipLabel>
    <relationshipName>Detalles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>